Project

General

Profile

Bug #55798

scrub starts message missing in cluster log

Added by Prashant D almost 2 years ago. Updated over 1 year ago.

Status:
Pending Backport
Priority:
Low
Assignee:
Category:
Correctness/Safety
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
pacific,quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

We used to log "scrub starts" and "deep-scrub starts" message if scrub/deep-scrub process has been started for the pg. We are no longer logging scrub starts messages in the cluster log.

The "starts" logline is useful in many situations in a troubleshooting perspective as it helps us to get the actual time taken for a scrub/deep-scrub to complete.

Refer : https://bugzilla.redhat.com/show_bug.cgi?id=2091773


Related issues

Copied to RADOS - Backport #56134: quincy: scrub starts message missing in cluster log Resolved
Copied to RADOS - Backport #56135: pacific: scrub starts message missing in cluster log Resolved

History

#1 Updated by Prashant D almost 2 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 46438

#2 Updated by Prashant D almost 2 years ago

  • Backport set to pacific,quincy

#3 Updated by Prashant D almost 2 years ago

  • Status changed from Fix Under Review to Pending Backport

#4 Updated by Backport Bot almost 2 years ago

  • Copied to Backport #56134: quincy: scrub starts message missing in cluster log added

#5 Updated by Backport Bot almost 2 years ago

  • Copied to Backport #56135: pacific: scrub starts message missing in cluster log added

#6 Updated by Backport Bot over 1 year ago

  • Tags set to backport_processed

Also available in: Atom PDF